--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,11 @@
             "includes/admin/admin-settings.php",
             "includes/admin/diagnostics.php"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11"
+    },
+    "scripts": {
+        "test": "php -d auto_prepend_file=tests/preload.php vendor/bin/phpunit"
     }
 }
