Add PHPCS configuration

--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,22 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^11"
+        "phpunit/phpunit": "^11",
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.1",
+        "wp-coding-standards/wpcs": "^3.2"
     },
     "scripts": {
-        "test": "php -d auto_prepend_file=tests/preload.php vendor/bin/phpunit"
+        "test": "php -d auto_prepend_file=tests/preload.php vendor/bin/phpunit",
+        "lint": "vendor/bin/phpcs"
     },
     "archive": {
         "exclude": [
             "tests/*"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
-
