Add gettext extraction tooling

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         ],
         "quality:fix": [
             "@lint:fix"
-        ]
+        ],
+        "i18n:pot": "php tools/make-pot.php"
     },
     "archive": {
         "exclude": [
