--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-2.0-or-later",
     "autoload": {
         "psr-4": {
-            "FpHic\\": "includes/"
+            "FpHic\\": "includes/",
+            "FpHic\\HicS2S\\": "src/"
         },
         "files": [
             "includes/constants.php",
